--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: # >- # this means to ignore newlines until "baseurl:"
 
 
 # Build settings
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
 
