--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: # >- # this means to ignore newlines until "baseurl:"
 
 
 # Build settings
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
